reintroduce ce ee badges for CE features, while also correctly wrapping them

--- a/source/stylesheets/release-posts.css.scss
+++ b/source/stylesheets/release-posts.css.scss
@@ -329,6 +329,10 @@ $article-width: 1680px;
   width: 73px;
 }
 
+.badge-container {
+  display: inline-block;
+}
+
 .figcaption {
   font-style: italic;
 }
